--- a/zero123/requirements.txt
+++ b/zero123/requirements.txt
@@ -1,6 +1,7 @@
---extra-index-url https://download.pytorch.org/whl/cu113
-torch==1.12.1
-torchvision==0.13.1
+--extra-index-url https://download.pytorch.org/whl/cu118
+torch==2.0.1
+torchaudio==2.0.2
+torchvision==0.15.2
 albumentations==0.4.3
 opencv-python==4.5.5.64
 pudb==2019.2
